# MyTest321_NeHeOpenGL

./: CMakeLists.txt  README.md  gen_vs2022.bat  gen_vs2022_cg_toolkit.bat  main.cpp  my_common.h  vs-chromium-project.txt
Lesson01/: CMakeLists.txt
Lesson02/: CMakeLists.txt
Lesson03/: CMakeLists.txt
Lesson04/: CMakeLists.txt
Lesson05/: CMakeLists.txt  Lesson5.cpp
Lesson06/: CMakeLists.txt
Lesson07/: CMakeLists.txt
Lesson08/: CMakeLists.txt
Lesson09/: CMakeLists.txt  Lesson9.cpp
Lesson10/: CMakeLists.txt
Lesson11/: CMakeLists.txt
Lesson12/: CMakeLists.txt
Lesson13/: CMakeLists.txt
Lesson14/: CMakeLists.txt
Lesson15/: CMakeLists.txt
Lesson16/: CMakeLists.txt
Lesson17/: CMakeLists.txt
Lesson18/: CMakeLists.txt
Lesson19/: CMakeLists.txt
Lesson20/: CMakeLists.txt
Lesson21/: CMakeLists.txt  Lesson21.cpp
Lesson22/: CMakeLists.txt  Lesson22.cpp
Lesson23/: CMakeLists.txt  Lesson23.cpp
Lesson24/: CMakeLists.txt
Lesson25/: CMakeLists.txt
Lesson26/: CMakeLists.txt
Lesson27/: 3Dobject.h  CMakeLists.txt
Lesson28/: CMakeLists.txt
Lesson29/: CMakeLists.txt
Lesson30/: CMakeLists.txt  Lesson30.cpp  Tmatrix.cpp  Tmatrix.h  Tray.cpp  Tray.h  Tvector.cpp  Tvector.h
Lesson31/: CMakeLists.txt  MilkshapeModel.cpp
Lesson32/: CMakeLists.txt
Lesson33/: CMakeLists.txt
Lesson34/: CMakeLists.txt
Lesson35/: CMakeLists.txt
Lesson36/: CMakeLists.txt
Lesson37/: CMakeLists.txt
Lesson38/: CMakeLists.txt  Lesson38.rc
Lesson39/: CMakeLists.txt
Lesson40/: CMakeLists.txt
Lesson41/: CMakeLists.txt
Lesson42/: CMakeLists.txt
Lesson43/: CMakeLists.txt  FreeType.cpp  Lesson43.cpp
Lesson44/: CMakeLists.txt  Lesson44.cpp
Lesson45/: CMakeLists.txt
Lesson46/: CMakeLists.txt
Lesson47/: CMakeLists.txt
Lesson48/: CMakeLists.txt
freetype/config/: ftmodule.h
lib/: freetype.lib
